state/cavern/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: cavern
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: linuxserver/jellyfin:nightly
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8096
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: media
          readOnly: True
        - mountPath: /config
          name: config
      restartPolicy: Always
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: config
        persistentVolumeClaim:
          claimName: config-jellyfin
