state/cavern/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: cavern
  labels:
    app: jellyfin
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.101
  ports:
  - name: http
    targetPort: http
    port: 8096
    protocol: TCP
  selector:
    app: jellyfin
